<resources>
    <string name="app_name">EproMonitor</string>

    <!-- Login -->
    <string name="login_pass_hint">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>

    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- Login Sign in -->
    <string name="login_confirm_pass_hint">Retype Password</string>
    <string name="code_mob">Code Mobile</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_validate">Validate</string>
    <string name="insert_user">Insert User</string>

    <!-- Menu -->
    <string name="nav_contact_fragment">Contact</string>
    <string name="nav_pa_fragment">Plans d\'Action (PA)</string>
    <string name="nav_gh_fragment">Gains Hebdomadaires (GH)</string>
    <string name="nav_recommandation_fragment">Recommandation</string>
    <string name="nav_telechargement_fragment">Téléchargement</string>
    <string name="nav_nettoyage_fragment">Nettoyage</string>
    <string name="nav_configuration">Configuration</string>
    <string name="nav_authentification_mobile">Authentification Mobile</string>
    <string name="nav_authentification_agent">Authentification Agent</string>
    <string name="nav_sign_in_user">Sign In  User</string>
    <string name="nav_user">User</string>
    <string name="nav_etablissement_fragment">Etablissement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Contact -->
    <string name="contact_nom">Dr. Epro Monitor</string>
    <string name="contact_specialite">MEDECINE GENERALE</string>
    <string name="contact_nature">PRESCRIPTEUR</string>
    <string name="contact_secteur">NON APLLICABLE</string>
    <string name="contact_email">email@yourmail.com</string>
    <string name="contact_nouveau">Nouveau Contact</string>
    <string name="contact_modifier">Modifier Contact</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prenom</string>
    <string name="hint_email">Email</string>
    <string name="hint_tel">Tel: 509-2222-1111</string>
    <string name="register_btn">Soumettre</string>

    <!-- Spinner Prompt-->
    <string name="prompt_force">Force</string>
    <string name="prompt_nature">Nature</string>
    <string name="prompt_secteur">Secteur</string>
    <string name="prompt_specialite">Spécialité</string>
    <string name="prompt_titre">Titre</string>
    <string name="prompt_etablissement">ETABLISSEMENT</string>
    <string name="prompt_statut_visite">STATUT VISITE </string>
    <string name="prompt_produit_promotionne_caps">PRODUIT PROMOTIONNE</string>
    <string name="prompt_produit_promotionne_min">Produit Promotionné</string>
    <string name="promt_acceptabilite">ACCEPTABILITE</string>

    <string name="select_force">SELECTIONNER UNE FORCE...</string>
    <string name="select_nature">SELECTIONNER UNE NATURE...</string>
    <string name="select_secteur">SELECTIONNER UNE SECTEUR...</string>
    <string name="select_specialite">SELECTIONNER UNE SPECIALITE...</string>
    <string name="select_titre">SELECTIONNER UNE TITRE...</string>
    <string name="select_etablissement">-- SELECTIONNER UN ETABLISSEMENT --</string>
    <string name="select_statut_visite">-- SELECTIONNER STATUT VISITE --</string>
    <string name="select_produit_promotionne">-- SELECTIONNER PRODUIT PROMOTIONNE --</string>
    <string name="select_acceptabilite">-- SELECTIONNER ACCEPTABILITE --</string>

    <string name="back_slash">/</string>

</resources>
