<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightPrimary"
    android:fitsSystemWindows="true"
    tools:context=".fragments.ContactRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">


        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/contact_nouveau"
            android:textColor="@color/input_login"
            android:textSize="46sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Spinner
                    android:id="@+id/spNature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:entries="@array/nature_array"
                    android:prompt="@string/prompt_nature"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spTitre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:entries="@array/titre_array"
                    android:prompt="@string/prompt_titre"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_contact"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_nom"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColorHint="@color/input_login_hint" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPrenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_contact"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_prenom"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColorHint="@color/input_login_hint" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spSecteur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:entries="@array/secteur_array"
                    android:prompt="@string/prompt_secteur"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spSpecialite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:entries="@array/specialite_array"
                    android:prompt="@string/prompt_specialite"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spForce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:entries="@array/specialite_array"
                    android:prompt="@string/prompt_force"
                    android:spinnerMode="dialog" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_contact"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_tel"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColorHint="@color/input_login_hint" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="2dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_contact"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColorHint="@color/input_login_hint" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_contact"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/register_btn"
            android:textColor="@color/bg_lightPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>