<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SignInActivity">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:src="@drawable/profile3" />

    <TextView
        android:id="@+id/txtTitre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-light"
        android:text="VALIDATE ACCOUNT"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="normal" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:textColor="@color/input_login"
            android:theme="@style/MyEditTextTheme" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:theme="@style/MyEditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etCodMob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/code_mob"
            android:inputType="text"
            android:textColor="@color/input_login"
            android:theme="@style/MyEditTextTheme" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSignIn"
        style="@style/MyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/border_login"
        android:text="@string/btn_validate" />

    <requestFocus />
</LinearLayout>