<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".fragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Epro-Monitor ID"
        android:textColor="@color/input_login"
        android:textSize="48sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/btn_sign_in"
        android:textColor="@color/input_login"
        android:textSize="36sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_confirm_pass_hint"
            android:inputType="textPassword"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_in"
        android:textStyle="bold"
        android:textColor="@color/bg_lightPrimary" />

    <requestFocus />
</LinearLayout>